<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.property_manager.views.PropertyManagerDashboardActivity">

    <Button
        android:id="@+id/dashb_propmng_button_properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property_title_plural"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="139dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/dashb_propmng_button_pending_repair_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_repair_report_title_plural"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dashb_propmng_button_pending_maintenance_scheduling"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/dashb_propmng_button_pending_maintenance_scheduling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_maintenance_schedule_title_plural"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dashb_propmng_button_maintenance_schedule"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/dashb_propmng_button_maintenance_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maintenance_schedule_title_plural"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dashb_propmng_button_properties"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/dashb_propmng_button_diagnostic_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnostic_request_title_plural"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dashb_propmng_button_pending_repair_reports"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
